Serch result page retrieves the book covers and fixed reviews going to antoher page

--- a/Search/src/app/views/static/css/search.css
+++ b/Search/src/app/views/static/css/search.css
@@ -13,10 +13,12 @@
 }
 
 .carousel-item img {
-    width: 200px;
-    height: 220px;
-    object-fit:cover;
+    width: 12rem;
+    height: 18.75rem;
+    object-fit: cover;
     border-radius: 15px;
+    max-width: 200px;
+    max-height: 300px;
 }
 
 .display-6{
