--- a/Search/src/app/views/static/css/search_result_page.css
+++ b/Search/src/app/views/static/css/search_result_page.css
@@ -26,10 +26,11 @@
 }
 
 .book-cover{
-    width: 85%;
-    height: 200px;
     object-fit:cover;
-    border-radius: 8px;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
 }
 
 .card-header{
